* Avoid object creation and an unnecessary function call in `Class#addMethods`, when working around JScript DontEnum bug. Replace with feature test and a simple boolean check at runtime. (kangax)

* Optimize Element#immediateDescendants. (kangax, Tobie Langel)

* Remove unnecessary function object creation and `Number#times` in `Element._getContentFromAnonymousElement`. (kangax)

* Eliminate runtime forking and long method lookup in `Element.hasAttribute`. (kangax)

* Remove redundant ternary. (kangax)

* Avoid repeating declaration statements where it makes sense, for slightly better runtime performance and minification. (kangax)

* Make `Event.stopObserving` return element in all cases. [#810 state:resolved] (Yaffle, Tobie Langel)

* String#startsWith, String#endsWith performance optimization (Yaffle, Tobie Langel, kangax)

* Rewrite String#camelize using String#replace with a replacement function (Phred, John-David Dalton, Samuel Lebeau, kangax)

*1.6.1* (August 24, 2009)

* Avoid triggering a warning when Java is disabled in IE8. [#668 state:resolved] (orv, kangax, Andrew Dupont, Tobie Langel)

* Simplify String#(un)escapeHTML and remove their DOM dependencies. (Tobie Langel)

* Update UnittestJS. Modifiy test template accordingly. (Tobie Langel)

* Remove redundant if statement in Element#readAttribute. (Tobie Langel)

* Add missing semicolons. [#751 state:resolved] (Diego Perini)

* Remove expensive (for such low-level method) internal `getClass` in favor of plain string comparison (kangax)

* Fix `PeriodicalExecuter` so that it no longer suppresses exceptions. [#696 state:resolved] (Samuel Lebeau, Yaffle)

* Fix issue related to escaping of selectors for querySelectorAll. [#559 state:resolved] (Jorn Holm)

*1.6.1_rc3* (June 16, 2009)

* Fixed a variety of non-ASCII chars and similar [#610 state:resolved] (T.J. Crowder)

* Add Chrome 1+ to the list of supported browsers. (kangax)
