@@ -1,3 +1,5 @@
+* Support 'Event.relatedTarget' on mouse(enter|leave) events in IE. This also fix functionnal mouseleave test on IE. [#708 state:resolved] (Walter Smith, Simon Charette)
+
 * Avoid object creation and an unnecessary function call in `Class#addMethods`, when working around JScript DontEnum bug. Replace with feature test and a simple boolean check at runtime. (kangax)
 
 * Optimize Element#immediateDescendants. (kangax, Tobie Langel)
